// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover snapshots should render Popover 1`] = `
<DocumentFragment>
  <div
    class="Popover Popover--light"
    data-test-popover="popover"
    style="left: 0px; top: 0px;"
  >
    <div
      class="PopoverItem PopoverItem--light"
      data-test-popover-item="0"
    >
      <div
        class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
        data-test-icon="check"
        height="12"
        name="Check"
        width="12"
      />
      <div
        class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
        data-test-icon="align-horizontal-center"
        height="12"
        name="AlignHorizontalCenter"
        width="12"
      />
      <small
        class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        text
      </small>
    </div>
    <div
      class="PopoverItem PopoverItem--light"
      data-test-popover-item="1"
    >
      <div
        class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--light PopoverItem__check-icon--selected PopoverItem__check-icon--selected--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
        data-test-icon="check"
        height="12"
        name="Check"
        width="12"
      />
      <div
        class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
        data-test-icon="align-horizontal-center"
        height="12"
        name="AlignHorizontalCenter"
        width="12"
      />
      <small
        class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        text
      </small>
    </div>
    <div
      class="PopoverSeparator PopoverSeparator--light"
    />
  </div>
</DocumentFragment>
`;

exports[`Popover snapshots should render selected 1`] = `
<DocumentFragment>
  <div
    class="Popover Popover--light Popover--selected Popover--selected--light"
    data-test-popover="popover"
    style="left: 0px; top: 0px;"
  >
    <div
      class="PopoverItem PopoverItem--light"
      data-test-popover-item="0"
    >
      <div
        class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
        data-test-icon="check"
        height="12"
        name="Check"
        width="12"
      />
      <div
        class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
        data-test-icon="align-horizontal-center"
        height="12"
        name="AlignHorizontalCenter"
        width="12"
      />
      <small
        class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        text
      </small>
    </div>
    <div
      class="PopoverItem PopoverItem--light"
      data-test-popover-item="1"
    >
      <div
        class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--light PopoverItem__check-icon--selected PopoverItem__check-icon--selected--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
        data-test-icon="check"
        height="12"
        name="Check"
        width="12"
      />
      <div
        class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
        data-test-icon="align-horizontal-center"
        height="12"
        name="AlignHorizontalCenter"
        width="12"
      />
      <small
        class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        text
      </small>
    </div>
    <div
      class="PopoverSeparator PopoverSeparator--light"
    />
  </div>
</DocumentFragment>
`;
